--- a/views/Css/CssUsuario/perfil.css
+++ b/views/Css/CssUsuario/perfil.css
@@ -1,120 +1,207 @@
+.container-conteudo {
+    padding: 2rem;
+}
 
-/* bt de voltar */
-div#bt-go-back {
+/* Background da tela de perfil Usuário */
+.background-imagePerfilUser{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80em;
+    background-image: url(/sistemackc/views/Img/ImgTelas/perfilUsuario.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center; 
+    opacity: 0.5; 
+    filter: grayscale(100%) brightness(10%);
+    z-index: -1;
+}
+
+
+.container-feedback {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+.ph-warning-circle,
+.ph-check-square {
+    margin: 0 .5rem;
+}
+
+.sucesso {
+    color: #00ff22b9;
+}
+
+.erro {
+    color: #ff0000b9;
+}
+
+.titulo {
+    margin: 2rem auto;
+    display: block; 
+    text-align: center;
+}
+
+.subtitulo {
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.inputFotoComum {
+    width: 280px;
+    height: 45px;
+    margin: 1rem 0rem 3rem;
+}
+
+.container {
+    margin: 1rem 0;
+}
+
+
+.containerFotoPerfil {
     display: flex;
-    margin: .3em;
+    flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-   
+    
 }
 
-/* seta do voltar */
-i.ph.ph-caret-left {
-    top: .1rem;
-    position: relative;
-}
-.chakra-petch-semibold {
-    font-family: "Chakra Petch", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-  }
-
-body{
- 
-  padding: 25px;
-  font-size: 20px;
-  color: white;
-  
-}
-
-.title {
-	color: #ffffff;
-	text-align: center;
-
-}
-
-#corpo {
-    width: 250px;
-    height: 500px;
-    margin: auto;
-    border: 2px solid rgb(21, 37, 170);
-    border-radius: 15px;
-    background: rgb(35, 33, 33);
-}
-#dataNascimento {
-   background-color: rgb(16, 12, 12);
-    width: 190px;
-    height: 3px;
-    margin: auto;
-    border: 2px solid rgb(21, 37, 170);
-    padding: 15px;
+.imagem {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    border-radius: 15px;
+    padding: 2rem;
+    margin: 2rem 0;
+    background-color: var(--text-base-light);
+    width: 280px; 
+    height: 280px;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
-#genero {
-   background-color: rgb(16, 12, 12);
-    width: 190px;
-    height: 3px;
-    margin: auto;
-    border: 2px solid rgb(21, 37, 170);
-    padding: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 15px;
+.ph-upload-simple {
+    font-size: 3rem;
+    color: var(--text-base-light);
 }
 
-#peso {
-    background-color: rgb(16, 12, 12);
-    width: 190px;
-    height: 3px;
-    margin: auto;
-    border: 2px solid rgb(21, 37, 170);
-    padding: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 15px;
+.campo {
+    display:flex;
+    flex-direction: column;
+    margin: 2rem 0;
 }
 
-#telefone {
-    background-color: rgb(16, 12, 12);
-    width: 190px;
-    height: 3px;
-    margin: auto;
-    border: 2px solid rgb(21, 37, 170);
-    padding: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 15px;
+.campo input {
+    color: var(--text-base-light);
+    width: 280px;
+    height: 45px;
+    margin: 1rem 0;
 }
 
-#CPF {
-    background-color: rgb(16, 12, 12);
-    width: 190px;
-    height: 3px;
-    margin: auto;
-    border: 2px solid rgb(21, 37, 170);
-    padding: 15px;
+.genero {
     display: flex;
-    justify-content: center;
     align-items: center;
-    border-radius: 15px;
+    gap: 1rem;
 }
 
-#email {
-    background-color: rgb(16, 12, 12);
-    width: 190px;
-    height: 3px;
-    margin: auto;
-    border: 2px solid rgb(21, 37, 170);
-    padding: 15px;
+.botao {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    border-radius: 15px;
+}
+
+.bt-atualizar, 
+.bt-alterar{
+    display: block;
+    text-align: center;
+    padding: 1.3rem;
+    width: 200px;
+    height: 50px;
+    border: none;
+    border-radius: 8px;
+    font-size: 1.6rem;
+    font-weight: 700;
+    background-color: var(--color-button);   
+    color: var(--text-base-light);
+    font-family: var(--fonte-title);
+    cursor: pointer;
+    margin: 2rem 0;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.bt-alterar:hover,
+.bt-atualizar:hover {
+    color: var(--background-campos);
+    background-color: var(--text-base-light);
+}
+
+@media (min-width: 375px) {
+    .campos,
+    .container-form,
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .campo input {
+        width: 300px;
+    }
+}
+
+@media (min-width: 425px) {
+    .inputFotoComum {
+        width: 350px;
+    }
+
+}
+
+
+@media (min-width: 1024px) {
+    .campos,
+    .container-form {
+        display: flex;
+        flex-direction: row;
+        align-items: start;
+        justify-content: center;
+        gap: 50px;
+    }
+
+    .botao {
+        display: flex;
+        flex-direction: row;
+        justify-content:  center;
+        gap: 70px;
+        margin: 2rem;
+    }
+
+    .bt-alterar,
+    .bt-atualizar {
+        margin: 2rem 0;
+        max-width: 270px;
+    }
+
+    .bt-alterar {
+        order: 1;
+    }
+
+    .bt-atualizar {
+        order: 2;
+    }
+}
+
+
+@media (min-width: 1800px) {
+    .containerFotoPerfil {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+    
+    .inputFotoComum {
+        width: 400px;
+        height: 45px;
+    }
+
 }
