--- a/views/Css/CssAdm/resultadoExibir.css
+++ b/views/Css/CssAdm/resultadoExibir.css
@@ -15,18 +15,18 @@
 }
 
 .background-image {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 80vw;
+    height: 100vh; 
     background-image: url(/sistemackc/views/Img/ImgTelas/cadastroUsuario.jpg);
     background-repeat: no-repeat;
     background-size: cover; 
     background-position: center; 
     opacity: 0.5; 
     filter: grayscale(100%) brightness(10%);
-    z-index: -1;
+    z-index: -1; 
 }
 
 main {
