--- a/views/Css/classificacao.css
+++ b/views/Css/classificacao.css
@@ -1,13 +1,46 @@
 main {
-    margin: 2rem;
-    padding: 1rem;
+    margin: 0;
+    padding: 0;
     width: 100%;
+}
+
+.background-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh; 
+    background-image: url(/sistemackc/views/Img/ImgTelas/cadastroUsuario.jpg);
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: center; 
+    opacity: 0.5; 
+    filter: grayscale(100%) brightness(10%);
+    z-index: -1; 
+}
+
+.container-feedback {
+    display: flex;
+    flex-direction: column;
+    font-size: 2rem;
+    align-items: center;
+    gap: 2rem;
+    width: 80%;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 4rem 0;
+    padding: 2rem;
 }
 
 .infoDeComeco{
     display: flex;
     flex-direction: column;
     text-align: center;
+    width: 100%;
 }
 
 form{
@@ -15,6 +48,7 @@ form{
     width: 100%;
     margin-top: 3rem;
     margin-bottom: 3rem;
+    justify-content: center;
 }
 
 .containerFiltros,
@@ -37,8 +71,9 @@ form label{
     color: white;
 }
 
-input, select.buscaSelect{
-    width: 260px;
+input, 
+select.buscaSelect{
+    max-width: 260px;
     font-family: var(--fonte-title);
     font-size: 1.4rem;
     font-weight: 500;
@@ -48,6 +83,11 @@ input, select.buscaSelect{
     border-radius: 10px;
     color: black;
     letter-spacing: 1.2px;
+}
+
+input,
+button {
+    width: 260px;
 }
 
 select.buscaSelect{
@@ -65,12 +105,19 @@ select option{
     background-color: rgb(220, 220, 220);
 }
 
-select.buscaSelect option:checked {
+select.buscaSelect option:checked,
+input::placeholder{
     color: black; 
 }
 
+input:focus::placeholder {
+    color: rgb(179, 179, 179); 
+}
+
 button.bt_filtrar{
-    width: 260px;
+    max-width: 260px;
+    background-color: var(--color-button); 
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 article.card {
@@ -87,13 +134,18 @@ article.card {
     flex-direction: column;
     justify-content: center;
     border-color: var(--color-button);
-    background-color: var(--background-cards);
+    background-color: #373331;
     gap: 3rem;
+}
+
+.time i{
+    margin: 0 .8rem;
 }
 
 .btn-verResultado {
     padding: 1.3rem;
     width: 180px;
+    margin-top: 2rem;
     border-radius: 8px;
     text-align: center;
     font-weight: 700;
@@ -101,3 +153,213 @@ article.card {
     color: var(--text-base-light);
     transition: background-color 0.3s ease, color 0.3s ease;
 }
+
+.btn-verResultado:hover,
+button.bt_filtrar:hover {
+    color: var(--background-campos);
+    background-color: var(--text-base-light);
+}
+
+@media (min-width: 375px) {
+    form{
+        margin: 4rem 0;
+    }
+    
+    .containerFiltros {
+        gap: 3rem;
+    }
+    
+    .filtro_ano,
+    .filtro_ano input, 
+    select.buscaSelect,
+    button.bt_filtrar {
+        max-width: 400px;
+    }
+
+    input,
+    button {
+        width: 282px;
+    }
+
+    button.bt_filtrar {
+        margin: 2rem 0;
+    }
+}
+
+@media (min-width: 425px) {
+    .infoDeComeco h1 {
+        font-size: 3rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .infoDeComeco h1 {
+        font-size: 3.5rem;
+    }
+    
+    .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 4rem 0;
+        padding: 2rem;
+    }
+    
+    .infoDeComeco{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+    }
+    
+    .containerFiltros{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        gap: 5rem;
+        padding: 2rem;
+    }
+
+    .filtro_classificacao,
+    .filtro_campeonato {
+        flex-basis: calc(40% - 20px);
+    }
+    
+    input, 
+    select.buscaSelect,
+    button.bt_filtrar{
+        font-size: 1.6rem;
+    }
+
+    select option{
+        height: 1rem;
+        font-size: 1.6rem;
+    }
+    
+    button {
+        width: 260px;
+    }
+
+    input{
+        width: 170px;
+    }
+      
+    .containerCards {
+        display: flex;
+        flex-wrap: wrap; 
+        gap: 5rem;
+        justify-content: center;
+    }
+}
+
+@media (min-width: 1024px) {
+    .infoDeComeco h1 {
+        font-size: 4rem;
+    }
+
+    .infoDeComeco p{
+        font-size: 2rem;
+    }
+
+    .containerFiltros{
+        justify-content: center;
+        align-items: center;
+        gap: 3rem;
+        padding: 2rem;
+    }
+
+    .filtro_dia,
+    .filtro_mes {
+        flex-basis: calc(40% - 50px);
+    }
+
+    input, 
+    select.buscaSelect,
+    button.bt_filtrar,
+    form label,
+    div.time,
+    select option{
+        font-size: 1.8rem;
+    }
+}
+
+@media (min-width: 1300px) {
+    .infoDeComeco h1 {
+        font-size: 4rem;
+    }
+
+    .infoDeComeco p{
+        font-size: 2rem;
+    }
+
+    .containerFiltros {
+        gap: 30px;
+    }
+
+    .filtro_campeonato,
+    .filtro_classificacao {
+        display: flex;
+        flex-direction: column;
+        flex-basis: 0;
+    }
+
+    .filtro_dia,
+    .filtro_mes {
+        flex-basis: 0;
+    }
+
+    .filtro_classificacao {
+        flex-basis: auto; 
+        max-width: none; 
+        width: auto; 
+    }
+
+    input, 
+    select.buscaSelect,
+    button.bt_filtrar,
+    form label,
+    div.time,
+    select option{
+        font-size: 1.5rem;
+    }
+}
+
+@media (min-width: 1440px) {
+    input, 
+    select.buscaSelect,
+    button.bt_filtrar,
+    form label,
+    div.time,
+    select option{
+        font-size: 1.7rem;
+    }
+
+    
+    button.bt_filtrar{
+        margin: 0;
+    }
+}
+
+@media (min-width: 1800px) {
+    input, 
+    select.buscaSelect,
+    button.bt_filtrar,
+    form label,
+    div.time,
+    select option{
+        font-size: 2rem;
+    }
+
+    .containerFiltros {
+        gap: 30px;
+        padding: 5rem;
+        margin: 0 6rem;
+    }
+
+    button.bt_filtrar{
+        margin: 0;
+    }
+    
+}
+
+
