--- a/views/Css/variaveis.css
+++ b/views/Css/variaveis.css
@@ -17,7 +17,9 @@
 
     --background-principal: #1E1A18;
     /*COR CERTA -> #1E1A18*/
+    --bacground-adm:#D9D9D9;
     --text-base-light: #fff;
+    --text-adm-black: #000;
     /* COR CERTA -> #fff */
     --color-button: #0033C1;
     --background-navbar: #232121;
@@ -31,6 +33,8 @@
     --categoria-ckc-110: #CC5918;
     --color-cmp: #eb3838;
     --background-cards: rgba(192, 192, 192, 0.15);
+    --background-tabelas-adm:#FFFBFA;
+    --tabelas-colunas-adm:rgb(0, 51, 193, 29%);
 }
 
 body {
@@ -190,7 +194,7 @@ ul.dropdown-menu {
     border-radius: 0;
     font-size: 3rem;
     cursor: pointer;
-    z-index: 10;
+    z-index: 5556;
 }
 
 div#bt-go-back {
@@ -345,6 +349,7 @@ div#bt-go-back {
         margin-top: 5px;
         position: relative;
         transition: 0.3s;
+        z-index: 5556;
     }
 
     /*Estilos ativos - aanimação que conecta com o js*/
