--- a/views/Css/CssUsuario/alterarSenha.css
+++ b/views/Css/CssUsuario/alterarSenha.css
@@ -7,7 +7,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 45em;
+    height: 80vh;
     background-image: url(/sistemackc/views/Img/ImgTelas/alteraSenha.jpeg);
     background-repeat: no-repeat;
     background-size: cover; 
